# rag

./: .gitignore  README.md  __init__.py  chunking.py  demo_retrieval.py  edge_cases.py  embeddings.py  llm.config.json  main.py  models.py  normalize.py  pipeline.py  pyproject.toml  qa.py  scraper.py  sources.config.json  sources.py
api/: __init__.py  server.py
caching/: __init__.py  lru_ttl_cache.py
commands/: build_reranker_dataset.py  train_reranker.py
docs/: architecture.md  features-catalog.md  handbook.md  project-handbook-legacy.md
embeddings/: embedder.py  faiss_store.py
evaluation/: dataset.py  metrics.py  runner.py
experiments/: run_experiments.py
generation/: __init__.py  config.py  llm.py  prompt.py  run_rag.py
ingestion/: cleaner.py  loaders.py
models/reranker-failure-driven/: README.md  config.json  config_sentence_transformers.json  model.safetensors
models/reranker-failure-driven/eval/: CrossEncoderClassificationEvaluator_failure-driven-val_results.csv
parser/: README.md  chunking.py  embeddings.py  main.py  pipeline.py  scraper.py  sources.py
reranking/: cross_encoder.py  failure_driven.py
retrieval/: hybrid.py
scripts/: build_evaluation_with_evidence.py  build_reranker_dataset.py  dataset_audit.py  run_best_eval.sh  train_reranker.py
tests/: test_api_server.py  test_caching_lru_ttl_cache.py  test_commands_dataset_tools.py  test_embeddings_faiss_store.py  test_evaluation_runner_helpers.py  test_mass_unit_cases.py  test_reranking_failure_driven.py
utils/: __init__.py  common.py  embedding_format.py  logger.py
