[tool.poetry]
name = "rag-agent-parser"
version = "0.1.0"
description = "RAG data parsing pipeline for scraping, chunking, and JSONL export."
authors = ["astarovo <astarovo@example.com>"]
readme = "README.md"
packages = [{ include = "parser" }, { include = "embeddings" }, { include = "retrieval" }, { include = "generation" }, { include = "utils" }, { include = "caching" }, { include = "api" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
requests = "*"
trafilatura = "*"
sentence-transformers = "*"
faiss-cpu = "*"
retry = "*"
datasets = "^4.8.4"
accelerate = "^1.13.0"
pydantic = "*"
tqdm = "*"
fastapi = "*"
uvicorn = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
ruff = "*"
httpx = "*"

[tool.poetry.scripts]
rag-parser = "parser.main:main"

[tool.black]
line-length = 100
target-version = ["py312"]
include = "\\.pyi?$"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

